Correct box-sizing and add align-items property
Fix box-sizing property and correct alignment.

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -28334,7 +28334,8 @@ td,th {
 * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
-    box-sizing: border-box
+    box-sizing: border-box;
+    align-items: centre
 }
 
 *:before,*:after {
